--- a/index.html
+++ b/index.html
@@ -6,18 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Random Number Game</title>
   <style>
+    :root {
+      --bg-color: #eef6ff;
+      --text-color: #333;
+      --container-bg: #fff;
+      --primary-color: #007bff;
+      --success-color: #28a745;
+    }
+
+    [data-theme="dark"] {
+      --bg-color: #121212;
+      --text-color: #e0e0e0;
+      --container-bg: #1e1e1e;
+      --primary-color: #3399ff;
+      --success-color: #4caf50;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #eef6ff, #d9eafd);
+      background: var(--bg-color);
+      color: var(--text-color);
       margin: 0;
       padding: 20px;
-      color: #333;
+      transition: background 0.4s, color 0.4s;
     }
 
     .container {
       max-width: 600px;
       margin: auto;
-      background: #fff;
+      background: var(--container-bg);
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -38,7 +55,7 @@
 
     h1 {
       text-align: center;
-      color: #0056b3;
+      color: var(--primary-color);
     }
 
     form,
@@ -64,7 +81,7 @@
     }
 
     button {
-      background-color: #007bff;
+      background-color: var(--primary-color);
       color: white;
       border: none;
       cursor: pointer;
@@ -72,7 +89,7 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      opacity: 0.9;
     }
 
     #log {
@@ -82,23 +99,39 @@
     #log p {
       background: #f1f9ff;
       padding: 10px;
-      border-left: 4px solid #007bff;
+      border-left: 4px solid var(--primary-color);
       margin: 5px 0;
     }
 
     #newGameBtn {
       display: none;
-      background-color: #28a745;
+      background-color: var(--success-color);
     }
 
     #newGameBtn.show {
       display: block;
+    }
+
+    .theme-toggle {
+      text-align: right;
+      margin-bottom: 10px;
+    }
+
+    .theme-toggle button {
+      padding: 6px 12px;
+      background-color: transparent;
+      color: var(--text-color);
+      border: 1px solid var(--text-color);
+      border-radius: 4px;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
+    <div class="theme-toggle">
+      <button onclick="toggleTheme()">Toggle Dark Mode</button>
+    </div>
     <h1>Random Number Game</h1>
 
     <form id="playerCountForm" class="active">
@@ -155,9 +188,22 @@
         const input = document.createElement('input');
         input.placeholder = `Player ${i + 1} name`;
         input.required = true;
+        input.addEventListener('keypress', (e) => {
+          if (e.key === 'Enter') {
+            e.preventDefault();
+            const inputs = [...playerNamesDiv.querySelectorAll('input')];
+            const currentIdx = inputs.indexOf(e.target);
+            if (currentIdx < inputs.length - 1) {
+              inputs[currentIdx + 1].focus();
+            } else {
+              rangeTopInput.focus();
+            }
+          }
+        });
         playerNamesDiv.appendChild(input);
       }
       show(playerNamesForm);
+      playerNamesDiv.querySelector('input')?.focus();
     });
 
     playerNamesForm.addEventListener('submit', e => {
@@ -230,6 +276,11 @@
     newGameBtn.addEventListener('click', () => {
       location.reload();
     });
+
+    function toggleTheme() {
+      const current = document.documentElement.getAttribute('data-theme');
+      document.documentElement.setAttribute('data-theme', current === 'dark' ? 'light' : 'dark');
+    }
   </script>
 </body>
 
